# 1d_rate_double_well

./: 1  Af_int.py  CMakeLists.txt  README.md  argparse.hpp  config.hpp  exact_eql_pop.cpp  inttable_mgr.hpp  loadinit.hpp  makefile  runBCME.cpp  runBCME_mpi.cpp  runBFP.cpp  runBFP_mpi.cpp  runCME.cpp  runCME_mpi.cpp  runFP.cpp  runFP_mpi.cpp  runIESH.cpp  runIESH_mpi.cpp  runModBCME.cpp  runModBCME_mpi.cpp  showsurf.cpp  sub.sh  submpi.sh  test.cpp
cmake/: FindMKL.cmake
dynamics_headers/particle_1d/: bcme_particle_1d.hpp  iesh_particle_1d.hpp
include/: argparse.hpp  config.hpp  loadinit.hpp
include/particle_1d/: iesh_particle_1d.hpp
script/: marcus_rate.py  prep_inttable.py
src/: CMakeLists.txt  bcme_mpi.cpp  exact_eql_pop.cpp  fp_mpi.cpp  iesh_mpi.cpp  showsurf.cpp
