FILE(GLOB SOURCES *.cpp)

SET(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})

FOREACH(SRC ${SOURCES})
    GET_FILENAME_COMPONENT(EXE ${SRC} NAME_WE)
    ADD_EXECUTABLE(${EXE} ${SRC})
    TARGET_LINK_LIBRARIES(${EXE} PUBLIC 
        ${Boost_LIBRARIES} 
        ${HDF5_CXX_LIBRARIES} 
        ${MPI_CXX_LIBRARIES} 
        ${MKL_LIBRARIES}
        )
ENDFOREACH()
